# webflow_blog_generator

./: .env.example  .gitignore  Makefile  README.md  README_BLOG_SETUP.md  ROADMAP.md  blog-config.example.json  blog-config.json  config.yaml  enrich-webflow-export.js  generate.js  main.py  package-lock.json  package.json  prompt_cms generator  prompt_cms generator.txt  pyproject.toml  requirements.txt  roadmap.md  webflow_blog_generator.code-workspace
Memory_Bank/: PLAN.md  activeContext.md  cli-interface-design.md  credential-manager-architecture.md  implementation-plan.md  planning-ftp-credentials.md  progress.md  projectbrief.md  refactoring_plan.md  security-considerations.md  tasks.md
configs/: blog-config.example.json  dogtolib-config.json  feelgooddog-config.json
data/: blog_post_3.csv  blog_posts.csv  blog_posts_old.csv  blog_posts_olds.csv
memory_bank/: activeContext.md  architecture.md  implementation_plan.md  planning.md  progress.md  projectbrief.md  tasks.md
modules/: __init__.py  content_generator.py  cred_manager.py  enricher.py  exporter.py  ftp_importer.py  importer.py
project-plan/: README.md  automation.js  config_template.json  package.json
scripts/: async_content_generator.py  benchmark_content_generation.py
src/: blog-generator.js
tests/: fetch_task_data.py  test_image_decode.py
website_configs/: sample.yaml
website_enricher/: README.md  assets.js  blog.js  config.js  deploy.sh  enrich-webflow-export.js  example-config.yaml  htaccess.js  images.js  package-lock.json  package.json  posts.js  sitemap.js  tasks.md  templates.js  (+1 more)
(+52 files in other folders)
