[project]
name = "website-blog-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "argparse>=1.4.0",
    "coloredlogs>=15.0.1",
    "ftputil>=5.0.4",
    "pandas>=2.2.3",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "selenium>=4.15.0",
    "tqdm>=4.66.1",
    "webdriver-manager>=4.0.1",
]

[dependency-groups]
dev = [
    "logfire>=3.14.0",
]
